--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.4'
 
 services:
-  team-registry:
+  team_registry:
     build: .
     volumes:
-      - .:/usr/docker/ACUPAYTest/src/app
+      - .:/usr/acupay/src/app
     ports:
       - 5000:80 # Expose port to access requirements
