--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3
 
-WORKDIR /usr/acupay/src/app
+WORKDIR /usr/acupay/team_registy/src/app
 
-COPY requirements.txt ./
+COPY requirements.txt ./ 
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
